Gettin the "N" panel in Image Preview in VSE makes the image disappear #55535

Closed
opened 2018-06-19 16:19:20 +02:00 by Hjalti Hjálmarsson · 9 comments

System Information
Xbuntu / AMD

Blender Version
92c519f

Short description of error
In the VSE if you have it set to Image Preview and hit the "N" button you get the panel on the right but the entire image disappears... also if you try to hit "N" again it will only work if you're hovering over the panel itself.

Exact steps for others to reproduce the error
New file
go to VSE
add a random video file
go to Image Preview
hit "N"
...witness the weirdness...

PS. If you have it set to Sequencer/Preview and hit "N" you'll see a skewed version of the image for a split second before it returns to normal. This might be a related bug.

**System Information** Xbuntu / AMD **Blender Version** 92c519f **Short description of error** In the VSE if you have it set to Image Preview and hit the "N" button you get the panel on the right but the entire image disappears... also if you try to hit "N" again it will only work if you're hovering over the panel itself. **Exact steps for others to reproduce the error** New file go to VSE add a random video file go to Image Preview hit "N" ...witness the weirdness... PS. If you have it set to Sequencer/Preview and hit "N" you'll see a skewed version of the image for a split second before it returns to normal. This might be a related bug.

Added subscriber: @Hjalti

Added subscriber: @Hjalti

Added subscriber: @ChristopherAnderssarian

Added subscriber: @ChristopherAnderssarian

Added subscriber: @mont29

Added subscriber: @mont29
Bastien Montagne self-assigned this 2018-07-23 09:53:26 +02:00

Indeed… :/

Indeed… :/

Added subscriber: @oweissbarth

Added subscriber: @oweissbarth

Added subscribers: @brecht, @fsiddi

Added subscribers: @brecht, @fsiddi

@brecht the issue discussed today is still open here. Maybe you could have a look if Bastien is too busy?

@brecht the issue discussed today is still open here. Maybe you could have a look if Bastien is too busy?

This issue was referenced by blender/blender@14b60c620f

This issue was referenced by blender/blender@14b60c620f7192df270548335371c064f7afae92

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: studio/blender-studio#55535
No description provided.