Fix T55535: N panel in sequencer breaks display of preview.

This preview region should not have been part of region overlap.